--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ beautifulsoup4==4.8.0
 billiard==3.3.0.23
 cachetools==3.1.1
 celery==3.1.26.post2
+certifi==2019.9.11
+chardet==3.0.4
 Django==2.2.5
 django-celery==3.3.1
 django-celery-results==1.1.2
@@ -12,16 +14,19 @@ google-api-python-client==1.7.11
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
 httplib2==0.13.1
+idna==2.8
 importlib-metadata==0.23
 kombu==3.0.37
 more-itertools==7.2.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.6
 pytz==2019.2
+requests==2.22.0
 rsa==4.0
 six==1.12.0
 soupsieve==1.9.4
 sqlparse==0.3.0
 uritemplate==3.0.0
+urllib3==1.25.6
 vine==1.3.0
 zipp==0.6.0
